<?xml version="1.0"?>
<package format="2">
  <name>forest_gen</name>
  <version>0.0.0</version>
  <description>
    Contains forest generation.
  </description>

  <maintainer email="zachary.taylor@mavt.ethz.ch">Zachary Taylor</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models_high_res"/>
    <gazebo_ros gazebo_media_path="${prefix}/models_high_res"/>
    <gazebo_ros gazebo_model_path="${prefix}/models_low_res"/>
    <gazebo_ros gazebo_media_path="${prefix}/models_low_res"/>
</export>
</package>
